Fix Shop title spacing

--- a/src/scss/_shop.scss
+++ b/src/scss/_shop.scss
@@ -4,7 +4,7 @@
   height: 250vh;
 
   h2 {
-    padding: 5rem 0 2.5rem 0;
+    padding: 5rem 0;
     font-weight: 800;
     font-size: clamp(2rem, 5vh, 3rem);
     color: $color-orange;
